<resources>
    <string name="app_name">WallpaperFinder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="favourite_fragment">Favourite</string>
    <string name="favourite_menu_name">Favourite</string>
    <string name="result_fragment">Search result</string>
    <string name="no_result_for_query">There is no such images on Unsplash.com</string>
    <string name="button_search">Search</string>
    <string name="detail_fragment_title">Image details</string>
    <string name="detail_label_width">Original image width:</string>
    <string name="detail_label_height">Original image height:</string>
    <string name="detail_label_description">Image description:</string>
    <string name="detail_sample_description">Image description is missing</string>
    <string name="detail_sample_width">Width unknown</string>
    <string name="detail_sample_height">Height unknown</string>
</resources>